--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <div class="center-dot"></div>
   </div>
 
-  <h2 id="current-price">$0.00</h2>
+  <h2 id="current-price">₹0.00</h2>
 
   <div class="auction-controls">
     <input type="number" id="startAmount" placeholder="Enter start amount" />
@@ -153,7 +153,7 @@
       const progress = Math.min(elapsed / duration, 1);
 
       const currentPrice = Math.max(0, startAmount * (1 - progress));
-      priceDisplay.textContent = `$${currentPrice.toFixed(2)}`;
+      priceDisplay.textContent = `₹${currentPrice.toFixed(2)} Cr`;
 
       // Hand starts at 12 (0°) and completes full 360° clockwise
       const rotation = 360 * progress;
@@ -176,7 +176,7 @@
 
     function resetAuction() {
       clearInterval(interval);
-      priceDisplay.textContent = "$0.00";
+      priceDisplay.textContent = "₹0.00";
       hand.style.transform = "translate(-50%, -100%) rotate(0deg)";
       startAmount = 0;
       duration = 0;
@@ -189,3 +189,4 @@
   </script>
 </body>
 </html>
+
